# linq

./: CMakeLists.txt  linq.h  linqTest.cpp  util.h
tests/: CodeCoverage.cmake  linq.cpp
